# medical-mlem-qa

./: .dockerignore  .gitignore  Dockerfile  README.md  RESULTS.md  RUN_STEPS.md  dvc.yaml  params.lexis.example.yaml  params.yaml  pyproject.toml
.dvc/: config
.gitlab/issue_templates/: lexis_container_workflow.md
scripts/: run_qa_reports.sh  train_model.sh  train_strong_models.sh
src/mlem_qa_medseg/: __init__.py  complementarity.py  config.py  data.py  device.py  ensemble.py  evaluate.py  export_predictions.py  metrics.py  models.py  preprocess.py  qa_router.py  train.py
