[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlem-qa-medseg"
version = "0.1.0"
description = "Medical segmentation pilot for MLEM-QA dynamic ensembling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "dvc>=3.50",
  "numpy>=1.24",
  "pandas>=2.0",
  "pillow>=10.0",
  "pyyaml>=6.0",
  "requests>=2.31",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "torchvision>=0.16",
  "tqdm>=4.66"
]

[project.scripts]
mlem-preprocess = "mlem_qa_medseg.preprocess:main"
mlem-train = "mlem_qa_medseg.train:main"
mlem-evaluate = "mlem_qa_medseg.evaluate:main"
mlem-export-predictions = "mlem_qa_medseg.export_predictions:main"
mlem-complementarity = "mlem_qa_medseg.complementarity:main"
mlem-ensemble = "mlem_qa_medseg.ensemble:main"
mlem-qa-router = "mlem_qa_medseg.qa_router:main"

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "pytest>=8.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
